--- a/knowf/package.json
+++ b/knowf/package.json
@@ -12,6 +12,8 @@
     "@reactflow/node-resizer": "^2.2.14",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.46.2",
+    "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query-devtools": "^5.62.0",
     "dagre": "^0.8.5",
     "next": "15.0.3",
     "react": "^18.3.1",
