--- a/knowf/package.json
+++ b/knowf/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "rm -rf .next && next build"
   },
   "dependencies": {
     "@reactflow/node-resizer": "^2.2.14",
