--- a/knowf/tsconfig.json
+++ b/knowf/tsconfig.json
@@ -20,7 +20,7 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["src/*"]
     },
     "declaration": true,
     "declarationMap": true
