--- a/knowf/package.json
+++ b/knowf/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "npm install --legacy-peer-deps --force && next build"
+    "vercel-build": " npm install --legacy-peer-deps --force && next build"
   },
   "dependencies": {
     "next": "15.0.3",
@@ -19,18 +19,19 @@
     "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-query-devtools": "^5.62.0",
     "dagre": "^0.8.5",
-    "reactflow": "^11.11.4"
+    "reactflow": "^11.11.4",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8"
   },
   "devDependencies": {
-    "@types/dagre": "^0.7.52",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "typescript": "^5",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=18.17.0"
