--- a/knowf/package.json
+++ b/knowf/package.json
@@ -21,7 +21,9 @@
     "dagre": "^0.8.5",
     "reactflow": "^11.11.4",
     "tailwindcss": "^3.4.1",
-    "postcss": "^8"
+    "postcss": "^8",
+    "autoprefixer": "^10",
+    "cssnano": "^6"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,9 +31,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "typescript": "^5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18.17.0"
