--- a/knowf/package.json
+++ b/knowf/package.json
@@ -10,6 +10,7 @@
     "vercel-build": " npm install --legacy-peer-deps --force && next build"
   },
   "dependencies": {
+    "typescript": "^5",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
@@ -30,8 +31,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "typescript": "^5"
+    "eslint-config-next": "15.0.3"
   },
   "engines": {
     "node": ">=18.17.0"
