--- a/knowf/package.json
+++ b/knowf/package.json
@@ -24,12 +24,10 @@
     "tailwindcss": "^3.4.1",
     "postcss": "^8",
     "autoprefixer": "^10",
-    "cssnano": "^6"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
+    "cssnano": "^6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/node": "^20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3"
   },
