--- a/knowf/package.json
+++ b/knowf/package.json
@@ -10,28 +10,31 @@
     "vercel-build": " npm install --legacy-peer-deps --force && next build"
   },
   "dependencies": {
-    "typescript": "^5",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
     "@reactflow/node-resizer": "^2.2.14",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-query-devtools": "^5.62.0",
-    "dagre": "^0.8.5",
-    "reactflow": "^11.11.4",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8",
-    "autoprefixer": "^10",
-    "cssnano": "^6",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/node": "^20",
+    "autoprefixer": "^10",
+    "cssnano": "^6",
+    "dagre": "^0.8.5",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "next": "15.0.3",
+    "postcss": "^8",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "reactflow": "^11.11.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18.17.0"
+  },
+  "devDependencies": {
+    "@types/dagre": "^0.7.52"
   }
 }
