--- a/knowf/package.json
+++ b/knowf/package.json
@@ -15,15 +15,16 @@
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-query-devtools": "^5.62.0",
+    "@types/dagre": "^0.7.52",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "cssnano": "^6",
     "dagre": "^0.8.5",
-    "@types/dagre": "^0.7.52",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "event-source-polyfill": "^1.0.31",
     "next": "15.0.3",
     "postcss": "^8",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -34,5 +35,8 @@
   },
   "engines": {
     "node": ">=18.17.0"
+  },
+  "devDependencies": {
+    "@types/event-source-polyfill": "^1.0.5"
   }
 }
