--- a/knowf/package.json
+++ b/knowf/package.json
@@ -19,11 +19,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/event-source-polyfill": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
     "autoprefixer": "^10",
     "cssnano": "^6",
     "dagre": "^0.8.5",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
     "event-source-polyfill": "^1.0.31",
     "next": "15.0.3",
     "postcss": "^8",
@@ -31,12 +32,13 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "reactflow": "^11.11.4",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.0.3"
   },
   "engines": {
     "node": ">=18.17.0"
   },
   "devDependencies": {
-    "@types/event-source-polyfill": "^1.0.5"
-  }
+ }
 }
