--- a/knowf/package.json
+++ b/knowf/package.json
@@ -10,35 +10,36 @@
     "vercel-build": " npm install --legacy-peer-deps --force && next build"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.1.6",
     "@reactflow/node-resizer": "^2.2.14",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-query": "^5.62.0",
     "@tanstack/react-query-devtools": "^5.62.0",
     "@types/dagre": "^0.7.52",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "@types/event-source-polyfill": "^1.0.5",
+    "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "autoprefixer": "^10",
     "cssnano": "^6",
     "dagre": "^0.8.5",
+    "eslint": "^9.16.0",
+    "eslint-config-next": "^15.0.3",
     "event-source-polyfill": "^1.0.31",
     "next": "15.0.3",
     "postcss": "^8",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "reactflow": "^11.11.4",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "eslint": "^9.16.0",
-    "eslint-config-next": "^15.0.3"
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=18.17.0"
   },
   "devDependencies": {
- }
+    "@types/node": "^22.10.1",
+    "@types/react": "^19.0.1",
+    "typescript": "^5.7.2"
+  }
 }
