--- a/knowb/requirements.txt
+++ b/knowb/requirements.txt
@@ -74,6 +74,7 @@ pydantic-extra-types==2.10.0
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
+PyPDF2==3.0.1
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
