--- a/knowb/requirements.txt
+++ b/knowb/requirements.txt
@@ -7,6 +7,7 @@ anyio==4.6.2.post1
 appnope==0.1.4
 asttokens==3.0.0
 attrs==24.2.0
+cachetools==5.5.0
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
@@ -25,7 +26,13 @@ fastapi-cli==0.0.5
 filelock==3.16.1
 frozenlist==1.5.0
 fsspec==2024.10.0
+google-api-core==2.23.0
+google-auth==2.36.0
+google-cloud-texttospeech==2.21.1
+googleapis-common-protos==1.66.0
 gotrue==2.11.0
+grpcio==1.68.1
+grpcio-status==1.68.1
 h11==0.14.0
 h2==4.1.0
 hpack==4.0.0
@@ -65,9 +72,13 @@ pluggy==1.5.0
 postgrest==0.18.0
 prompt_toolkit==3.0.48
 propcache==0.2.0
+proto-plus==1.25.0
+protobuf==5.29.1
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.2
 pydantic-extra-types==2.10.0
@@ -87,6 +98,7 @@ regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 rpds-py==0.21.0
+rsa==4.9
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
