Added functionality to Dashboard

--- a/knowf/tsconfig.json
+++ b/knowf/tsconfig.json
@@ -20,7 +20,8 @@
       }
     ],
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"],
+      "@shadcn/*": ["src/components/shadcn/*"]
     },
     "declaration": true,
     "declarationMap": true,
