--- a/knowf/package.json
+++ b/knowf/package.json
@@ -10,6 +10,8 @@
     "vercel-build": " npm install --legacy-peer-deps --force && next build"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/themes": "^3.1.6",
     "@reactflow/node-resizer": "^2.2.14",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -18,21 +20,29 @@
     "@tanstack/react-query-devtools": "^5.62.0",
     "@types/dagre": "^0.7.52",
     "@types/event-source-polyfill": "^1.0.5",
+    "@types/node": "^20",
+    "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
     "autoprefixer": "^10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "cssnano": "^6",
     "dagre": "^0.8.5",
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.3",
     "event-source-polyfill": "^1.0.31",
+    "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "postcss": "^8",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "reactflow": "^11.11.4",
-    "tailwindcss": "^3.4.1"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss": "^3.4.16",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5"
   },
   "engines": {
     "node": ">=18.17.0"
