--- a/knowf/package.json
+++ b/knowf/package.json
@@ -34,6 +34,7 @@
     "eslint": "^9.16.0",
     "eslint-config-next": "^15.0.3",
     "event-source-polyfill": "^1.0.31",
+    "heroicons": "^2.2.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.3",
     "postcss": "^8",
